src/view/health/snapshots/nifi_lens__view__health__render__tests__health_initial_loading.snap
---
source: src/view/health/render.rs
assertion_line: 712
expression: snap(&state)
---
"  ● Queues         ▸  0    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories      0    ││                                                                                          │"
"  ● Nodes             0    ││                                                                                          │"
"  ● Processors        0    ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                  waiting for first poll…                                 │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"             —             ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
