src/view/health/snapshots/nifi_lens__view__health__render__tests__health_nodes_populated.snap
---
source: src/view/health/render.rs
assertion_line: 858
expression: snap(&state)
---
"  ● Queues            0    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories      0    ││  Node                  Heap              GC            Load    Threads   Uptime          │"
"  ● Nodes          ▸  2    ││> nifi-node-1:8443      [███████░░░]  75%  142 (+3)      2.4     287       4d 12h         │"
"  ● Processors        0    ││  nifi-node-2:8443      [█████████░]  90%  210 (+12)     5.1     310       2d 3h          │"
"                           ││  nifi-node-3:8443      [██░░░░░░░░]  25%  80            —       150       10d 0h         │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"      fetched 0s ago       ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
