src/view/health/snapshots/nifi_lens__view__health__render__tests__health_processors_populated.snap
---
source: src/view/health/render.rs
assertion_line: 904
expression: snap(&state)
---
"  ● Queues            0    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories      0    ││  Processor               PG Path               Threads   Status      CPU (5m)            │"
"  ● Nodes             0    ││> PutDatabaseRecord       root/persist          8         RUNNING     4.2s                │"
"  ● Processors     ▸  0    ││  ConsumeKafka_2_6        root/ingest           4         RUNNING     1.8s                │"
"                           ││  MergeContent            root/enrich           2         RUNNING     0.9s                │"
"                           ││  UpdateAttribute         root/enrich/transfo…  0         STOPPED     0.0s                │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"      fetched 0s ago       ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
