src/view/health/snapshots/nifi_lens__view__health__render__tests__health_queues_empty.snap
---
source: src/view/health/render.rs
assertion_line: 774
expression: snap(&state)
---
"  ● Queues         ▸  0    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories      0    ││                                                                                          │"
"  ● Nodes             0    ││                                                                                          │"
"  ● Processors        0    ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                    all queues healthy                                    │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"      fetched 0s ago       ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
