src/view/health/snapshots/nifi_lens__view__health__render__tests__health_queues_populated.snap
---
source: src/view/health/render.rs
assertion_line: 766
expression: snap(&state)
---
"  ● Queues         ▸  2    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories      0    ││> GenerateFlowFi…→PutDatabaseRec…  [█████████░]  95%     overflowing                      │"
"  ● Nodes             0    ││    12,345 / 5.6 MB         in 12.3 MB/5m · out 8.1 MB/5m                                 │"
"  ● Processors        0    ││  ListenHTTP→RouteOnAttribu…       [███████░░░]  72%     ~30m                             │"
"                           ││    500 / 2.0 MB            in 1.0 MB/5m · out 512.0 KB/5m                                │"
"                           ││  ConsumeKafka→MergeContent        [███░░░░░░░]  30%     stable                           │"
"                           ││    50 / 100.0 KB           in 50.0 KB/5m · out 50.0 KB/5m                                │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"      fetched 0s ago       ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
