src/view/health/snapshots/nifi_lens__view__health__render__tests__health_repositories_populated.snap
---
source: src/view/health/render.rs
assertion_line: 809
expression: snap(&state)
---
"  ● Queues            0    │┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"  ● Repositories   ▸  2    ││  Content Repository                                                                      │"
"  ● Nodes             0    ││    content-1             [███████████████░░░░░]  78%                                     │"
"  ● Processors        0    ││      56.3 GB / 72.2 GB · free 15.8 GB                                                    │"
"                           ││    content-2             [████░░░░░░░░░░░░░░░░]  20%                                     │"
"                           ││      9.3 GB / 46.6 GB · free 37.3 GB                                                     │"
"                           ││  FlowFile Repository                                                                     │"
"                           ││    flowfile-repo         [███████████████████░]  95%                                     │"
"                           ││      88.5 GB / 93.1 GB · free 4.7 GB                                                     │"
"                           ││  Provenance Repository                                                                   │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"                           ││                                                                                          │"
"      fetched 0s ago       ││                                                                                          │"
"    1-4 select · ? help    │└──────────────────────────────────────────────────────────────────────────────────────────┘"
